# notes

./: .gitignore  404.html  PLAN.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requrements.txt  setup.sh  sitemap.xml  temp.css
.github/workflows/: ci.yml  deploy.yml  render_nerf_nb.yaml
LLM/: index.html
LLM/LLM/: index.html
LLM/LangChain/: index.html
LLM/Qdrant/: index.html
LLM/RAG/: index.html
agents/: index.html
agents/A2A/: index.html
agents/LangGraph/: index.html
agents/MCP/: index.html
basics/: index.html
basics/Activation/: index.html
basics/Attention/: index.html
basics/BiasVar/: index.html
basics/CICD/: index.html
basics/Distance/: index.html
basics/Extra/: index.html
basics/FastAPI/: index.html
basics/FeatureEngg/: index.html
basics/GithubAction/: index.html
basics/Inference/: index.html
basics/InfoTheory/: index.html
basics/Loss/: index.html
basics/MLEMAE/: index.html
basics/Mathematics/: index.html
basics/Metric/: index.html
basics/Optimization/: index.html
basics/PositionEncoding/: index.html
basics/Probability/: index.html
basics/Regularization/: index.html
basics/Scheduler/: index.html
basics/VectorCalculus/: index.html
basics/bayesian/: index.html
casestudy/: index.html
categories/getting-started/: index.html
cv/: index.html
cv/classification/: index.html
cv/cnn/: index.html
docs/: index.md
ml/: index.html
mlops/: index.html
nlp/: index.html
notebooks/: index.html
search/: search_index.json
snippets/: notebook.html
stylesheets/: extra.css
(+161 files in other folders)
