[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.64.0",
    "fastapi>=0.116.1",
    "instructor>=1.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-macros-plugin>=1.3.9",
    "mkdocs-material[imaging]>=9.6.17",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-video>=1.5.0",
    "openai>=1.99.9",
    "pydantic-ai>=0.7.2",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
]
